packages/crayons-core/src/components/toast-message/toast-message.scss
@media screen and (prefers-reduced-motion: reduce) {
  .toast.is-open {
    animation: none;
  }
}

.toast.is-open {
  display: block;
  animation-duration: 0.5s;
  animation-name: fadeIn;
  z-index: 999;
}

.toast {
  display: none;
  position: relative;
  top: 10px;
  width: 400px;
  padding: 0px 0px 16px 0px;
  border: 1px solid $color-smoke-50;
  border-radius: 4px;
  background-color: $color-milk;
  margin-bottom: 16px;
  box-sizing: border-box;
  box-shadow: 0px 2px 4px rgba(18, 52, 77, 0.06),
    0px 2px 16px rgba(18, 52, 77, 0.16);

  overflow-wrap: break-word;
  word-break: break-all;
  white-space: normal;

  &.success {
    border-top: 5px solid $color-jungle-500;
  }

  &.error {
    border-top: 5px solid $color-persimmon-800;
  }

  &.warning {
    border-top: 5px solid $color-casablanca-300;
  }

  &.inprogress {
    border-top: 5px solid $color-azure-800;
  }
}

.toast-container {
  margin-top: 16px;
  display: flex;
  align-items: flex-start;
  place-content: center;

  .content {
    color: $color-elephant-900;
    line-height: 20px;
    flex: 1 1 auto;
    font-size: $font-size-14;
    font-weight: $font-weight-500;
    vertical-align: top;
  }

  .icon {
    margin: 5px 16px 0px 16px;
  }

  .remove {
    margin: 5px 12px 0px 12px;
  }
}

.action-link {
  color: $color-azure-800;
  line-height: 14px;
  cursor: pointer;
  font-size: $font-size-12;
  font-weight: $font-weight-600;
  padding: 8px 0px;
}

@keyframes fadeOut {
  100% {
    top: -600px;
  }
}

@keyframes fadeIn {
  0% {
    top: -600px;
  }

  100% {
    top: 10px;
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .toast.fade-out {
    animation: none;
  }
}

.toast.fade-out {
  animation-duration: 1s;
  animation-name: fadeOut;
}

